dist-iter/tests/compile_fail_tests/setup/mod.rs
mod missing_setup_fn;
mod setup_fn_with_args;
